Bug 1329977 - creating doc accessibles for existing content documents. r=surkov

MozReview-Commit-ID: 2X6DdBX2ieO